<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="giokit_dialog_ok">确定</string>
    <string name="giokit_dialog_cancel">取消</string>
    <string name="giokit_title_default">GioKit</string>
    <string name="giokit_universal_title">GiokitUniversalActivity</string>

    <string name="giokit_checkself">CHECK-SELF</string>
    <string name="giokit_check_content">点击检查埋点 SDK 是否集成成功</string>
    <string name="giokit_check_author">By GrowingIO</string>
    <string name="giokit_check_goal">Goals</string>
    <string name="giokit_check_service">为用户提供最好的埋点服务</string>

    <string name="giokit_menu_common">常用工具</string>
    <string name="giokit_menu_info">SDK信息</string>
    <string name="giokit_menu_code">代码埋点</string>
    <string name="giokit_menu_data">事件库</string>
    <string name="giokit_menu_data_search">查找 \&quot;%1$s\&quot; 数据</string>
    <string name="giokit_menu_track">XPath追踪</string>
    <string name="giokit_menu_http">网络记录</string>
    <string name="giokit_menu_monitor">实时事件</string>
    <string name="giokit_menu_monitor_running">实时事件监控正在显示中…</string>
    <string name="giokit_menu_h5door">H5任意门</string>
    <string name="giokit_menu_h5door_hint">请输入要跳转的网址</string>
    <string name="giokit_menu_h5door_input">http://release-messages.growingio.cn/push/cdp/cdp.html</string>
    <string name="giokit_menu_h5door_confirm">点击跳转</string>
    <string name="giokit_menu_h5door_hybrid">注入Hybrid SDK</string>
    <string name="giokit_menu_h5door_web_giokit">注入JS GioKit</string>
    <string name="giokit_menu_h5door_error">请输入正确的链接地址</string>
    <string name="giokit_menu_setting">设置</string>
    <string name="giokit_menu_common_setting">通用设置</string>
    <string name="giokit_menu_performance">性能</string>
    <string name="giokit_menu_error">错误报告</string>
    <string name="giokit_menu_pref">启动耗时</string>

    <string name="giokit_circle_tip">请拖动中间的圆点选择控件</string>

    <string name="giokit_data_loading">正在加载中</string>
    <string name="giokit_data_search_default">事件</string>
    <string name="giokit_data_search_hint">输入要搜索的事件类型</string>
    <string name="giokit_data_delete_message">是否删除所有的事件数据记录？</string>

    <string name="giokit_http_running">已持续运行</string>
    <string name="giokit_http_count">请求数量</string>
    <string name="giokit_http_size">数据上传</string>
    <string name="giokit_http_error">请求失败</string>
    <string name="giokit_http_cost">耗时：%1$s</string>
    <string name="giokit_http_request">请求</string>
    <string name="giokit_http_response">响应</string>
    <string name="giokit_http_covert">转换</string>
    <string name="giokit_http_message">消息体</string>
    <string name="giokit_http_request_header">请求头</string>
    <string name="giokit_http_response_header">响应头</string>
    <string name="giokit_http_request_body">请求数据</string>
    <string name="giokit_http_delete_message">是否删除所有的网络请求数据记录？</string>

    <string name="giokit_pref_data">数据</string>
    <string name="giokit_pref_event_clear">清空事件</string>
    <string name="giokit_pref_event_clear_desc">清空事件库中的所有事件数据</string>
    <string name="giokit_pref_http_clear">清空网络</string>
    <string name="giokit_pref_http_clear_desc">清空网络记录下的所有请求数据</string>
    <string name="giokit_pref_monitor_clear">清空性能数据</string>
    <string name="giokit_pref_monitor_clear_desc">清空性能监控下产生的所有历史数据</string>

    <string name="giokit_pref_apm">性能监控</string>
    <string name="giokit_pref_apm_activity">Activity 启动时间</string>
    <string name="giokit_pref_apm_fragment">Fragment 启动时间</string>
    <string name="giokit_pref_apm_crash">Java Crash 日志</string>
    <string name="giokit_pref_apm_anr">Anr 日志</string>
    <string name="giokit_pref_delete_message">是否清空性能监控下产生的所有历史数据？</string>
    
    <string name="giokit_pref_function">功能启用</string>
    <string name="giokit_pref_function_jskit">WebView GioKit</string>
    <string name="giokit_pref_function_jskit_desc">是否在网页中注入Web版本的Giokit</string>

    <string name="giokit_pref_app_cold">应用启动</string>
    <string name="giokit_pref_app_warm">应用恢复</string>
    <string name="giokit_pref_tag_cold">冷启动</string>
    <string name="giokit_pref_tag_warn">热启动</string>
    <string name="giokit_pref_duration">耗时 %1$s 毫秒</string>

</resources>