<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/checkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/checkButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/giokit_check_button_bg" />

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_giokit_tab_self_check" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/descLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/giokit_checkself"
                android:textAllCaps="true"
                android:textColor="@color/hover_accent"
                android:textSize="@dimen/giokit_text_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/giokit_check_content"
                android:textAllCaps="true"
                android:textSize="@dimen/giokit_text_caption"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/giokit_check_author"
                android:textAllCaps="true"
                android:textSize="@dimen/giokit_text_tag" />


        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/textview_goals_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/giokit_check_goal"
            android:textAllCaps="true"
            android:textColor="@color/hover_accent"
            android:textSize="@dimen/giokit_text_caption"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/giokit_check_service"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>