<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:divider="@android:color/darker_gray"
    app:dividerPadding="2dp"
    app:showDividers="middle"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/giokit_menu_common"
            android:textColor="@android:color/black"
            android:textSize="@dimen/giokit_text_title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sdkInfoLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_info"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sdkCodeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_code" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_code"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sdkDataLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_database" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_data"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sdkTrackLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_track" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_track"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sdkHttpLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_http"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sdkMonitorLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_monitor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_monitor"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/giokit_menu_performance"
            android:textColor="@android:color/black"
            android:textSize="@dimen/giokit_text_title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sdkCrashLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_http" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_crash"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/giokit_menu_setting"
            android:textColor="@android:color/black"
            android:textSize="@dimen/giokit_text_title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sdkCommonSettingLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/giokit_check_menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_giokit_menu_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/giokit_menu_common_setting"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/giokit_text_body" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>