<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hover_accent"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/giokit_http_message"
            android:textColor="@android:color/white"
            android:textSize="@dimen/giokit_text_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/requestDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:enabled="true"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message"
            tools:text="请求链接：www.baidu.com\n请求方式：POST\n数据大小：124KB" />

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/hover_accent"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/giokit_http_request_header"
            android:textColor="@android:color/white"
            android:textSize="@dimen/giokit_text_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestDetail" />

        <TextView
            android:id="@+id/requestHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:text="user-agent:askdqo" />

        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/hover_accent"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/giokit_http_request_body"
            android:textColor="@android:color/white"
            android:textSize="@dimen/giokit_text_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestHeader" />

        <TextView
            android:id="@+id/requestBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:enabled="true"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body"
            tools:text="{jfasfasf:faksdjla.dsda}" />

        <ImageView
            android:id="@+id/requestConvert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/giokit_http_covert"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_giokit_http_convert"
            app:layout_constraintBottom_toBottomOf="@+id/body"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintTop_toTopOf="@+id/body" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>